welcome.lessons.welcome.bat.bool1.NearHundred.scala.error
nearHundred:4: error: value || is not a member of Int
	if (a || b) {
              ^