welcome.lessons.welcome.bat.bool1.NearHundred.scala.code
def nearHundred(n:Int): Boolean = {
	var a = Math.abs (n - 100)
	var b = Math.abs (n - 200)
	if (a || b) {
		return true;
	}
	return false;
}
